# moral

./: .gitignore  README.md  app.py  config.yaml  inference.py  main.py  preprocess_images.py  pyproject.toml  requirements.txt
tests/: test_app.py  test_config_loading.py  test_inference.py  test_main.py  test_preprocess_images.py
